fixing q1,q2, main html, and css 1 css2

--- a/highscore.html
+++ b/highscore.html
@@ -20,3 +20,25 @@
 
 
    <!--this page suppose to link to question page for final answers-->
+
+
+
+   <!--question 2 -->
+<div id="quizpage" style="display: none;">
+  <h2>What do the acronym HTML stand for? </h2>
+<ul>
+      <li>
+          <button type="button" class="btn qbutton" id="one" data-answer="A.HyperText Markup Language">A.HyperText Markup Language</button>
+      </li>
+      <li>
+          <button type="button" class="btn qbutton" id="one" data-answer="B.Hyper Text Mark Up Language">B.Hyper Text Mark Up Language</button>
+      </li>
+      <li>
+          <button type="button" class="btn qbutton" id="one" data-answer="C.Hype Text Mark Up Language">C.Hype Text Mark Up Language</button>
+      </li>
+      <li>
+          <button type="button" class="btn qbutton" id="one" data-answer="D.Hi-Tech Markup Language">D.Hi-Tech Markup Language</button>
+      </li>
+</ul>
+
+<div id="quizpage" style="display: none;">
