--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized.</p>
     <p>Good luck and May the odds be in your favor! </p>
     <button id="submit" class="btn active" type="button">start</button>
+    <link src="./question1.html">
 </div>
 <!--QUIZ PAGE-->
 <main class="container">
