--- a/question1.html
+++ b/question1.html
@@ -20,14 +20,12 @@
             <!--question 1 -->
     <h2>What is the world's most popular language?</h2>
     <form>
-        <label for="answerA">A.English</label>
-            <input type="button" class="answerbutton"></input><br>
-        <label for="answerB">B.Spanish</label>
-            <input type="button" class="answerbutton"></input><br>
-        <label for ="answerC">C.French</label>
-            <input type="button" class="answerbutton"></input><br>
-        <label for="answerD">D.Javascript</label>
-            <input type="button" class="answerbutton"></input><br>
+
+        <button id="submit" class="btn active" type="button" data-letter="A">A. English</button>
+        <button id="submit" class="btn active" type="button" data-letter="B">B. Spanish</button>
+        <button id="submit" class="btn active" type="button" data-letter="C">C. French</button>
+        <button id="submit" class="btn active" type="button" data-letter="D">D. Javascript</button>
+
 
     <script src="./assets/scripts/script.js"></script>
     </form>
