--- a/question1.html
+++ b/question1.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>question 1</title>
     <link rel="stylesheet" href="./assets/css/question1.css"></link>
-    
 </head>
-<nav class="header">
-    <a type="button" id="score">View High Scores</a>
-    <a id="timer">Time: 0</a>
+    <nav class="header">
+        <a type="button" id="score">View High Scores</a>
+        <a id="timer">Time: 0</a>
 </nav>
 <header>
     <h1> Round 1</h1>
@@ -21,14 +20,15 @@
     <h2>What is the world's most popular language?</h2>
     <form>
 
-        <button id="submit" class="btn active" type="button" data-letter="A">A. English</button>
-        <button id="submit" class="btn active" type="button" data-letter="B">B. Spanish</button>
-        <button id="submit" class="btn active" type="button" data-letter="C">C. French</button>
-        <button id="submit" class="btn active" type="button" data-letter="D">D. Javascript</button>
-
+        <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
+        <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
+        <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
+        <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
 
     <script src="./assets/scripts/script.js"></script>
     </form>
+
+        <button id="next" class="btn active" type="button">Next</button>
 </main>
 </body>
 </html>
