first commit for JS

--- a/question2.html
+++ b/question2.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question 2</title>
-<link rel="stylesheet" href="./assets/css/question2.css"></link>
+    <title>question 1</title>
+    <link rel="stylesheet" href="./assets/css/question1.css"></link>
 </head>
+    <nav class="header">
+        <a type="button" id="score">View High Scores</a>
+        <a id="timer">Time: 0</a>
+</nav>
+<header>
+    <h1> Round 1</h1>
+</header>
 <body>
-    
+    <main class="container">
+            <!--question 1 -->
+    <h2>What is the world's most popular language?</h2>
+    <form>
+
+        <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
+        <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
+        <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
+        <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
+
+    <script src="./assets/scripts/script.js"></script>
+    </form>
+
+        <button id="next" class="btn active" type="button">Next</button>
+</main>
 </body>
 </html>
-
-
-
-
