--- a/question1.html
+++ b/question1.html
@@ -25,8 +25,11 @@
         <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
         <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
 
-    <script src="./assets/scripts/script.js"></script>
     </form>
+    <script src="script.js" type="text/javascript"></script>
+    <script rel="script" href="./assets/scripts/"></script>
+
+    
 
         <button id="next" class="btn active" type="button">Next</button>
 </main>
