working on html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,21 @@
     <link rel="html" href="../want-to-play-a-game/question1.html">
 </div>
 <!--QUIZ PAGE-->
-<main class="container">
 
+    <h1> Round 1</h1>
+<div>
+    <main class="container">
+            <!--question 1 -->
+    <h2>What is the world's most popular language?</h2>
+    <form>
+
+        <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
+        <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
+        <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
+        <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
+
+    </form>
+</div>
     <!--response after selecting answer-->
         <div id="answerRepsonse"></div>
     </div>
