--- a/question1.html
+++ b/question1.html
@@ -16,22 +16,28 @@
 </header>
 <body>
     <main class="container">
-            <!--question 1 -->
-    <h2>What is the world's most popular language?</h2>
-    <form>
-
-        <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
-        <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
-        <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
-        <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
-
-    </form>
+        <div id="q1">
+            <h2 id="start"> Round 1</h2>
+            
+                    <!--question 1 -->
+            <h2>What is the world's most popular language?</h2>
+            <ul>
+                <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
+                <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
+                <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
+                <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
+            </ul>    
+        </v>
+            <!--response after selecting answer-->
+                <div id="answerRepsonse"></div>
+            <button name="previous" id="previous" class="btn btn-success">Previous</button>
+            <br>
+            <button name="next" id="next" class="btn btn-success">Next</button>
+        </div>  
     <script src="script.js" type="text/javascript"></script>
-    <script rel="script" href="./assets/scripts/"></script>
+    <script rel="script.js" href="./assets/scripts/"></script>
 
     
-
-        <button id="next" class="btn active" type="button">Next</button>
 </main>
 </body>
 </html>
