--- a/question2.html
+++ b/question2.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>question 1</title>
-    <link rel="stylesheet" href="./assets/css/question1.css"></link>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Javascript Quiz</title>
+<link rel="stylesheet" href="./assets/css/style.css">
 </head>
-    <nav class="header">
-        <a type="button" id="score">View High Scores</a>
-        <a id="timer">Time: 0</a>
-</nav>
-<header>
-    <h1> Round 1</h1>
-</header>
 <body>
-    <main class="container">
-            <!--question 1 -->
-    <h2>What is the world's most popular language?</h2>
-    <form>
-
-        <button id="A" class="btn active" type="button" data-letter="A">A. English</button>
-        <button id="B" class="btn active" type="button" data-letter="B">B. Spanish</button>
-        <button id="C" class="btn active" type="button" data-letter="C">C. French</button>
-        <button id="D" class="btn active" type="button" data-letter="D">D. Javascript</button>
-
-    <script src="./assets/scripts/script.js"></script>
-    </form>
-
-        <button id="next" class="btn active" type="button">Next</button>
-</main>
+<header>
+<div class="left-title">JS Quiz</div>
+<div class="right-title">Total Questions: <span id="tque"></span></div>
+<div class="clearfix"></div>
+</header>
+<div class="content">
+<div class="container-fluid">
+<div class="row">
+<div class="col-sm-12">
+<div id="result" class="quiz-body">
+<form name="quizForm" onSubmit="">
+<fieldset class="form-group">
+<h4><span id="qid">1.</span> <span id="question"></span></h4>
+<div class="option-block-container" id="question-options">
+</div> <!-- End of option block -->
+</fieldset>
+<button name="previous" id="previous" class="btn btn-success">Previous</button>
+&nbsp;
+<button name="next" id="next" class="btn btn-success">Next</button>
+</form>
+</div>
+</div> <!-- End of col-sm-12 -->
+</div> <!-- End of row -->
+</div> <!-- ENd of container fluid -->
+</div> <!-- End of content -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
