--- a/question2.html
+++ b/question2.html
@@ -4,32 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>question 1</title>
-    <link rel="stylesheet" href="./assets/css/question1.css"></link>
+    <title>Want To Play A Game?</title>
 </head>
-    <nav class="header">
-        <a type="button" id="score">View High Scores</a>
-        <a id="timer">Time: 0</a>
-</nav>
-<header>
-    <h2> Round 2</h2>
-</header>
 <body>
-    <main class="container">
-        <div id="q1">
-            
-                    <!--question 1 -->
-            <h2>What is the world's most popular language?</h2>
-            <ul>
-                <button id="A" class="active" type="button">A. English</button>
-                <button id="B" class="active" type="button">B. Spanish</button>
-                <button id="C" class="active" type="button">C. French</button>
-                <button id="D" class="active" type="button">D. Javascript</button>
-            </ul>    
-        </v>
-            <!--response after selecting answer-->
-        <div id="answerRepsonse"></div>
-                <button name="previous" id="previous" class="btn btn-success">Previous</button>
-                <button name="next" id="next" class="btn-success">Next</button>
-        </div>  
-    <script src="script.js" type="text/javascript"></script>
+    <header>
+        <h1>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor!</h1>
+    </header>
+    <div>
+        <p>Question 1. Who is the author for the book series Harry Potter?</p><br>
+            <input type="radio" name="q1">E.L. James<br>
+            <input type="radio" name="q1" id="correct1">J.K. Rowling<br>
+            <input type="radio" name="q1">Maya Banks<br>
+            <input type="radio" name="q1">James Patterson<br>
+   <!--answer is B : J.K. Rowling--> 
+    </div>
+
+
+    <div>
+        <p>Question 2. Who is Tom Riddle?</p><br>
+            <input type="radio" name="q2" id="correct2">Voldemort<br>
+            <input type="radio" name="q2">Dumboldore<br>
+            <input type="radio" name="q2">Hagrid<br>
+            <input type="radio" name="q2">Severus Snape<br>
+    <!--answer is A : Tom Riddle--> 
+    </div>
+
+        <p>Question 3. Which of the following that was not a Horcrux?</p><br>
+            <input type="radio" name="q3">Diary<br>
+            <input type="radio" name="q3">Basilisk<br>
+            <input type="radio" name="q3" id="correct3">stone<br>
+            <input type="radio" name="q3">Ring<br>
+    <!--answer is C : Stone--> 
+
+        <p>Question 4. What or Who lives inside the Chamber of Secrects?</p><br>
+            <input type="radio" name="q4">Happy Potter<br>
+            <input type="radio" name="q4" id="correct4">Severus Snape<br>
+            <input type="radio" name="q4">Draco Malfoy<br>
+            <input type="radio" name="q4">Ronald Weasley<br>
+    <!--answer is B : Severus Snape--> 
+
+    <input type="submit" name="submit" value="submitQuiz" onclick="result()">
+
+    <button name="previous" id="previous" class="btn btn-success">Previous</button>
+    <button name="next" id="next" class="btn-success">Next</button>
+<script type="text/javascript"></script>
+    
+</body>
+</html>
