--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <title>Quiz Code Mock up</title>
 </head>
 <header>
-        <a id="score" class="btn" href="./highscore.html">View High Scores</a>
+        <a id="score" class="btn" href="./score.html">View High Scores</a>
         <a id="timer" class="btn">Time: 0</a>
 
     <h1>Want To Play A Game?</h1>
