--- a/score.html
+++ b/score.html
@@ -16,7 +16,8 @@
             <a id="score" class="btn">Score</a>
             <a id="timer" class="btn">Time</a>
         </div>
-
+    
+        <script src="./assets/scripts/script.js"></script>
     <script type="text/javascript"></script>
 </body>
 </html>
