--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav class="header">
     <div class="card-body">
-        <a id="score" class="btn" href="./highscore.html">View High Scores</a>
+        <a id="score" class="btn" href="./score.html">View High Scores</a>
         <a id="timer" class="btn" href="./score.html">Time: 0</a>
     </div>
 </nav>
