--- a/game.html
+++ b/game.html
@@ -9,9 +9,10 @@
     <title>Quiz Code Mock up</title>
 </head>
 <header>
+    <div id="set">
         <a id="score" class="btn" href="./score.html">View High Scores</a>
         <a id="timer" class="btn">Time: 0</a>
-
+    </div>
     <h1>Want To Play A Game?</h1>
     <h2>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor!</h2>
 </header>
@@ -40,7 +41,7 @@
             <input type="radio" name="q3">Ring<br>
     <!--answer is C : Stone--> 
 
-        <p class="q4">Question 4. What or Who lives inside the Chamber of Secrects?</p><br>
+        <p class="q4">Question 4. Who is the half blood prince?</p><br>
             <input type="radio" name="q4">Happy Potter<br>
             <input type="radio" name="q4" id="correct4">Severus Snape<br>
             <input type="radio" name="q4">Draco Malfoy<br>
