fixing js and html for timer to work

--- a/game2.html
+++ b/game2.html
@@ -9,7 +9,7 @@
     <title>Quiz Code Mock up</title>
 </head>
 <header>
-    <div id="set">
+    <div id="main">
         <a id="score" class="btn" href="./score.html">View High Scores</a>
         <a id="timer" class="btn">Time: 0</a>
     </div>
@@ -17,8 +17,6 @@
     <h2>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor!</h2>
 </header>
 <body>
-   
-    <div>Registration closes in <span id="time">00:60</span> minutes!</div>
     
     <div class="container" id="game">
             
