--- a/game.html
+++ b/game.html
@@ -9,15 +9,15 @@
     <title>Quiz Code Mock up</title>
 </head>
 <header>
-    <div id="set">
+    <div id="main">
         <a id="score" class="btn" href="./score.html">View High Scores</a>
-        <a id="timer" class="btn">Time: 0</a>
+        <a id="timer" class="btn"></a>
     </div>
     <h1>Want To Play A Game?</h1>
     <h2>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor!</h2>
 </header>
 <body>
-    <div>Registration closes in <span id="time">00:60</span> minutes!</div>
+    
     <div class="container" id="game">
         <ul>  
             <p class="q1">Question 1. Who is the author for the book series Harry Potter?</p><br>
