updating html and JS

--- a/frontpage.html
+++ b/frontpage.html
@@ -19,7 +19,7 @@
 </nav>
 
 <!-- main body with question and choice-->
-<body onload="question1">
+<body>
     <h1>Want To Play A Game?</h1>
     <div>
         <p>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor! </p>
