--- a/game2.html
+++ b/game2.html
@@ -25,7 +25,7 @@
         <p class="q3">Question 3. Which of the following that was not a Horcrux?</p><br>
             <input type="radio" name="q3">Diary<br>
             <input type="radio" name="q3">Basilisk<br>
-            <input type="radio" name="q3" id="correct3">stone<br>
+            <input type="radio" name="q3" id="correct3">Stone<br>
             <input type="radio" name="q3">Ring<br>
     <!--answer is C : Stone--> 
 
