fixing js for timer to work

--- a/frontpage.html
+++ b/frontpage.html
@@ -14,7 +14,7 @@
 <nav class="header">
     <div class="card-body">
         <a id="score" class="btn" href="./score.html">View High Scores</a>
-        <a id="timer" class="btn" href="./score.html">Time: 0</a>
+        <a id="timer" class="btn" href="./assets/scripts/game2.js">Time: 0</a>
     </div>
 </nav>
 
@@ -28,7 +28,7 @@
     </div>
     </div>
 
-    <script src="./assets/scripts/script.js"></script>
+    <script src="./assets/scripts/game2.js"></script>
     <script type="text/javascript"></script>
 
 
