adding for loop and queryselector, fixing up html

--- a/game2.html
+++ b/game2.html
@@ -38,7 +38,7 @@
     </ul>
     </div>
 
-    <a type="button" class="submit" value="Submit Quiz" href="./score.html">Submit Quiz</a>
+    <button id="final" class="submit" value="Submit Quiz" href="./score.html">Submit Quiz</button>
     <a type="button" class="previous" value="Previous" href="./game.html">Previous</a>
 <script src="./assets/scripts/script.js"></script>
 <script type="text/javascript"></script>
