--- a/game.html
+++ b/game.html
@@ -53,7 +53,7 @@
 
         </ul>
     </div>
-    <button id="final" class="submit" value="Submit Quiz" href="./score.html">Submit Quiz</button>
+    <a id="final" class="submit" value="Submit Quiz" href="./score.html">Submit Quiz</a>
     <a type="button" class="previous" value="Previous" href="./frontpage.html">Previous</a>
 
     <script src="./assets/scripts/script.js"></script>
