changing formats in js to original

--- a/frontpage.html
+++ b/frontpage.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Quiz</title>
-    <link rel="stylesheet" href="./css/fp.css">
+    <title>JS quiz </title>
+<link rel="stylesheet" href="./assets/css/style.css"></link>
+
 </head>
+
+<!--header with timer and score-->
+
+<nav class="header">
+    <div class="card-body">
+        <a id="score" class="btn" href="./score.html">View High Scores</a>
+        <p  class="btn" href="./assets/scripts/game2.js">Time: 0</p>
+    </div>
+</nav>
+
+<!-- main body with question and choice-->
 <body>
-    <header>
-        <div>
-            <a href="score" id="high-score">High Score</a>
-        </div>
-        <div>
-            <h1 id="timer">Time:0</h1>
-        </div>
-    </header>
-    <main>
-        <div id="main-content" class="main"></div>
-    </main>
-    <script src="./script/homework.js"></script>
+    <h1>Want To Play A Game?</h1>
+    <div>
+        <p>You only have 60 seconds to answer all of the question's. For every incorrect answers, you will be penalized. Good luck and May the odds be in your favor! </p>
+    <div id="button">
+        <a id="start" class="button" href="./game.html">start</a>
+    </div>
+    </div>
+
+    <script src="./assets/scripts/script.js"></script>
+    <script type="text/javascript"></script>
+
+
 </body>
 </html>
