add questions into js

--- a/game.html
+++ b/game.html
@@ -27,6 +27,6 @@
     <footer>
         <h2>Nina Lor</h2>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
